--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ input{
     border:1px solid rgb(221, 188, 145) ;
     border-radius: 8px;
     padding: 10px;
-    
+     width: 100%;
+    box-sizing:border-box
 }
 button{
     position: relative;
