--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
     color: rgb(0, 0, 0);
+    
+}
+.div{
+    height:400px;
 }
 body{
     background-color: antiquewhite;
@@ -11,6 +15,7 @@ body{
     animation-delay: 2s;    
     animation-iteration-count:infinite;
     animation-direction: alternate;
+ 
 }
 
 #head{
@@ -30,6 +35,7 @@ input{
     border:1px solid rgb(221, 188, 145) ;
     border-radius: 8px;
     padding: 10px;
+    
 }
 button{
     position: relative;
@@ -61,11 +67,12 @@ button{
 }
 #endtex {
     font-size: 0.8rem;
-    text-align: center;
-    margin-top: 240px;
+    position: relative;
+    top: 440px;
+    left: 120px;
 }
 #line{
     position: relative;
     
-    top:220px;
+    top:410px;
 }
